--- a/style.css
+++ b/style.css
@@ -1,351 +1,212 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700;800&display=swap");
-:root {
-	--card-width: 200px;
-	--card-height: 300px;
-
-	--card-transition-duration: 800ms;
-	--card-transition-easing: ease;
-}
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600&family=Roboto:wght@300;400;500;900&display=swap");
 
 * {
-	box-sizing: border-box;
-	margin: 0;
-	padding: 0;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Open Sans", sans-serif;
 }
 
-body {
-	width: 100%;
-	height: 100vh;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	background: rgba(0, 0, 0, 0.787);
-	overflow: hidden;
+main {
+  position: relative;
+  width: calc(min(90rem, 90%));
+  margin: 0 auto;
+  min-height: 100vh;
+  column-gap: 3rem;
+  padding-block: min(20vh, 3rem);
 }
 
-button {
-	border: none;
-	background: none;
-	cursor: pointer;
-	&:focus {
-		outline: none;
-		border: none;
-	}
+.bg {
+  position: fixed;
+  top: -4rem;
+  left: -12rem;
+  z-index: -1;
+  opacity: 0;
 }
 
-.app {
-	position: relative;
-	width: 100%;
-	height: 100%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-
-	&__bg {
-		position: absolute;
-		width: 100%;
-		height: 100%;
-		z-index: -5;
-		filter: blur(8px);
-		pointer-events: none;
-		user-select: none;
-		overflow: hidden;
-
-		&::before {
-			content: "";
-			position: absolute;
-			left: 0;
-			top: 0;
-			width: 100%;
-			height: 100%;
-			background: #000;
-			z-index: 1;
-			opacity: 0.8;
-		}
-
-		&__image {
-			position: absolute;
-			left: 50%;
-			top: 50%;
-			transform: translate(-50%, -50%) translateX(var(--image-translate-offset, 0));
-			width: 180%;
-			height: 180%;
-			transition: transform 1000ms ease, opacity 1000ms ease;
-			overflow: hidden;
-
-			img {
-				width: 100%;
-				height: 100%;
-				object-fit: cover;
-			}
-			&.current--image {
-				opacity: 1;
-				--image-translate-offset: 0;
-			}
-			&.previous--image,
-			&.next--image {
-				opacity: 0;
-			}
-			&.previous--image {
-				--image-translate-offset: -25%;
-			}
-			&.next--image {
-				--image-translate-offset: 25%;
-			}
-		}
-	}
+.bg2 {
+  position: fixed;
+  bottom: -2rem;
+  right: -3rem;
+  z-index: -1;
+  width: 9.375rem;
+  opacity: 0;
 }
 
-.cardList {
-	position: absolute;
-	width: calc(3 * var(--card-width));
-	height: auto;
-
-	&__btn {
-		--btn-size: 35px;
-		width: var(--btn-size);
-		height: var(--btn-size);
-		position: absolute;
-		top: 50%;
-		transform: translateY(-50%);
-		z-index: 100;
-
-		&.btn--left {
-			left: -5%;
-		}
-		&.btn--right {
-			right: -5%;
-		}
-
-		.icon {
-			width: 100%;
-			height: 100%;
-			svg {
-				width: 100%;
-				height: 100%;
-			}
-		}
-	}
-
-	.cards__wrapper {
-		position: relative;
-		width: 100%;
-		height: 100%;
-		perspective: 1000px;
-	}
+main > div span {
+  text-transform: uppercase;
+  letter-spacing: 1.5px;
+  font-size: 1rem;
+  color: #717171;
 }
 
-.card {
-	--card-translateY-offset: 100vh;
-
-	position: absolute;
-	left: 50%;
-	top: 50%;
-	transform: translate(-50%, -50%) translateX(var(--card-translateX-offset))
-		translateY(var(--card-translateY-offset)) rotateY(var(--card-rotation-offset))
-		scale(var(--card-scale-offset));
-	display: inline-block;
-	width: var(--card-width);
-	height: var(--card-height);
-	transition: transform var(--card-transition-duration)
-		var(--card-transition-easing);
-	user-select: none;
-
-	&::before {
-		content: "";
-		position: absolute;
-		left: 0;
-		top: 0;
-		width: 100%;
-		height: 100%;
-		background: #000;
-		z-index: 1;
-		transition: opacity var(--card-transition-duration)
-			var(--card-transition-easing);
-		opacity: calc(1 - var(--opacity));
-	}
-
-	&__image {
-		position: relative;
-		width: 100%;
-		height: 100%;
-		img {
-			position: absolute;
-			left: 0;
-			top: 0;
-			width: 100%;
-			height: 100%;
-			object-fit: cover;
-		}
-	}
-
-	&.current--card {
-		--current-card-rotation-offset: 0;
-		--card-translateX-offset: 0;
-		--card-rotation-offset: var(--current-card-rotation-offset);
-		--card-scale-offset: 1.2;
-		--opacity: 0.8;
-	}
-
-	&.previous--card {
-		--card-translateX-offset: calc(-1 * var(--card-width) * 1.1);
-		--card-rotation-offset: 25deg;
-	}
-
-	&.next--card {
-		--card-translateX-offset: calc(var(--card-width) * 1.1);
-		--card-rotation-offset: -25deg;
-	}
-
-	&.previous--card,
-	&.next--card {
-		--card-scale-offset: 0.9;
-		--opacity: 0.4;
-	}
+main > div h1 {
+  text-transform: capitalize;
+  letter-spacing: 0.8px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 900;
+  font-size: clamp(3.4375rem, 3.25rem + 0.75vw, 4rem);
+  background-color: #005baa;
+  background-image: linear-gradient(45deg, #005baa, #000000);
+  background-size: 100%;
+  background-repeat: repeat;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-background-clip: text;
+  -moz-text-fill-color: transparent;
 }
 
-.infoList {
-	position: absolute;
-	width: calc(3 * var(--card-width));
-	height: var(--card-height);
-	pointer-events: none;
-
-	.info__wrapper {
-		position: relative;
-		width: 100%;
-		height: 100%;
-		display: flex;
-		justify-content: flex-start;
-		align-items: flex-end;
-	perspective: 1000px;
-	transform-style: preserve-3d;
-	}
+main > div hr {
+  display: block;
+  background: #005baa;
+  height: 0.25rem;
+  width: 6.25rem;
+  border: none;
+  margin: 1.125rem 0 1.875rem 0;
 }
 
-.info {
-	margin-bottom: calc(var(--card-height) / 8);
-	margin-left: calc(var(--card-width) / 1.5);
-	transform: translateZ(2rem);
-	transition: transform var(--card-transition-duration)
-		var(--card-transition-easing);
-	.text {
-		position: relative;
-		font-family: "Montserrat";
-		font-size: calc(var(--card-width) * var(--text-size-offset, 0.2));
-		white-space: nowrap;
-		color: #fff;
-		width: fit-content;
-	}
-
-	.name,
-	.location {
-		text-transform: uppercase;
-	}
-
-	.location {
-		font-weight: 800;
-	}
-
-	.location {
-		--mg-left: 40px;
-		--text-size-offset: 0.12;
-		font-weight: 600;
-		margin-left: var(--mg-left);
-		margin-bottom: calc(var(--mg-left) / 2);
-		padding-bottom: 0.8rem;
-		&::before,
-		&::after {
-			content: "";
-			position: absolute;
-			background: #fff;
-			left: 0%;
-			transform: translate(calc(-1 * var(--mg-left)), -50%);
-		}
-		&::before {
-			top: 50%;
-			width: 20px;
-			height: 5px;
-		}
-		&::after {
-			bottom: 0;
-			width: 60px;
-			height: 2px;
-		}
-	}
-
-	.description {
-		--text-size-offset: 0.065;
-		font-weight: 500;
-	}
-
-	&.current--info {
-		opacity: 1;
-		display: block;
-	}
-	&.previous--info,
-	&.next--info {
-		opacity: 0;
-		display: none;
-	}
+main > div p {
+  line-height: 1.6;
 }
 
-.loading__wrapper {
-	position: fixed;
-	left: 0;
-	top: 0;
-	width: 100%;
-	height: 100%;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	background: #000;
-	z-index: 200;
-	.loader--text {
-		color: #fff;
-		font-family: "Montserrat";
-		font-weight: 500;
-		margin-bottom: 1.4rem;
-	}
-	.loader {
-		position: relative;
-		width: 200px;
-		height: 2px;
-		background: rgba(255, 255, 255, 0.25);
-		span {
-			position: absolute;
-			left: 0;
-			top: 0;
-			width: 100%;
-			height: 100%;
-			background: rgb(255, 0, 0);
-			transform: scaleX(0);
-			transform-origin: left;
-		}
-	}
+main a {
+  display: inline-block;
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #717171;
+  font-weight: 500;
+  background: #fff;
+  border-radius: 3.125rem;
+  transition: 0.3s ease-in-out;
 }
 
-@media only screen and (min-width: 800px) {
-	:root {
-		--card-width: 250px;
-		--card-height: 400px;
-	}
+main > div > a {
+  border: 2px solid #c2c2c2;
+  margin-top: 2.188rem;
+  padding: 0.625rem 1.875rem;
 }
 
-.support {
-	position: absolute;
-	right: 10px;
-	bottom: 10px;
-	padding: 10px;
-	display: flex;
-	a {
-		margin: 0 10px;
-		color: #fff;
-		font-size: 1.8rem;
-		backface-visibility: hidden;
-		transition: all 150ms ease;
-		&:hover {
-			transform: scale(1.1);
-		}
-	}
+main > div > a:hover {
+  border: 0.125rem solid #005baa;
+  color: #005baa;
+}
+
+.swiper {
+  width: 100%;
+  padding-top: 3.125rem;
+}
+
+.swiper-pagination-bullet,
+.swiper-pagination-bullet-active {
+  background: #fff;
+}
+
+.swiper-pagination {
+  bottom: 1.25rem !important;
+}
+
+.swiper-slide {
+  width: 18.75rem;
+  height: 28.125rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  align-items: self-start;
+}
+
+.swiper-slide h2 {
+  color: #fff;
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 1.4rem;
+  line-height: 1.4;
+  margin-bottom: 0.625rem;
+  padding: 0 0 0 1.563rem;
+  text-transform: uppercase;
+}
+
+.swiper-slide p {
+  color: #dadada;
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
+  padding: 0 1.563rem;
+  line-height: 1.6;
+  font-size: 0.75rem;
+  display: -webkit-box;
+  -webkit-line-clamp: 4;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
+.swiper-slide a {
+  margin: 1.25rem 1.563rem 3.438rem 1.563rem;
+  padding: 0.438em 1.875rem;
+  font-size: 0.9rem;
+}
+
+.swiper-slide a:hover {
+  color: #005baa;
+}
+
+.swiper-slide div {
+  display: none;
+  opacity: 0;
+  padding-bottom: 0.625rem;
+}
+
+.swiper-slide-active div {
+  display: block;
+  opacity: 1;
+}
+
+.swiper-slide--one {
+  background: linear-gradient(to top, #0f2027, #203a4300, #2c536400),
+    url("https://images.unsplash.com/photo-1628944682084-831f35256163?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80")
+      no-repeat 50% 50% / cover;
+}
+
+.swiper-slide--two {
+  background: linear-gradient(to top, #0f2027, #203a4300, #2c536400),
+    url("https://images.unsplash.com/photo-1515309025403-4b0184873cef?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=735&q=80")
+      no-repeat 50% 50% / cover;
+}
+
+.swiper-slide--three {
+  background: linear-gradient(to top, #0f2027, #203a4300, #2c536400),
+    url("https://images.unsplash.com/photo-1545671913-b89ac1b4ac10?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80")
+      no-repeat 50% 50% / cover;
+}
+
+.swiper-slide--four {
+  background: linear-gradient(to top, #0f2027, #203a4300, #2c536400),
+    url("https://images.unsplash.com/photo-1598977123118-4e30ba3c4f5b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80")
+      no-repeat 50% 50% / cover;
+}
+
+.swiper-slide--five {
+  background: linear-gradient(to top, #0f2027, #203a4300, #2c536400),
+    url("https://images.unsplash.com/photo-1570481662006-a3a1374699e8?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=765&q=80")
+      no-repeat 50% 50% / cover;
+}
+
+.swiper-3d .swiper-slide-shadow-left,
+.swiper-3d .swiper-slide-shadow-right {
+  background-image: none;
+}
+
+@media screen and (min-width: 48rem) {
+  main {
+    display: flex;
+    align-items: center;
+  }
+  .bg,
+  .bg2 {
+    opacity: 0.1;
+  }
+}
+
+@media screen and (min-width: 93.75rem) {
+  .swiper {
+    width: 85%;
+  }
 }
